pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - containerPort: 80
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
        volumeMounts:
        - name: etc-pihole
          mountPath: /etc/pihole
        - name: etc-dnsmasq
          mountPath: /etc/dnsmasq.d
      volumes:
      - name: etc-pihole
        hostPath:
          path: /home/jgreene/pihole/etc-pihole
      - name: etc-dnsmasq
        hostPath:
          path: /home/jgreene/pihole/etc-dnsmasq.d
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: default
spec:
  type: NodePort
  selector:
    app: pihole
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
    nodePort: 30053
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
    nodePort: 30053
